fix/ main in style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,200&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +18,7 @@
     <main>
         <article id="main-article">
                     <section class="text-image-section">
-                        <div>
+                        <div class="text">
                             <h2>Crea uno spazio su invito in cui sentirti partecipe</h2> 
                             <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
                         </div>
@@ -29,7 +28,7 @@
                     </section>
 
                     <section class="text-image-section">
-                        <div>
+                        <div class="text">
                             <h2>Dove trovarsi è facile</h2> 
                             <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
                         </div>
@@ -39,7 +38,7 @@
                     </section>
 
                     <section class="text-image-section">
-                        <div>
+                        <div class="text">
                             <h2>Da pochi a un fandom</h2> 
                             <p>Dai inizio a una community con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.</p>
                         </div>
@@ -49,18 +48,20 @@
                     </section>
 
                     <section class="text-image-section">
-                        <div>
+                        <div class="text">
                             <h2>TECNOLOGIA AFFIDABILE PER TENERSI IN CONTATTO</h2> 
                             <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                         </div>
                         <div>
-                            <img src="./img/info1.svg" alt=>
+                            <img src="./img/info-full.svg" alt=>
                         </div>
                     </section>
 
-                    <section>
-                        <h1>Pronto a iniziare la tua avventura?</h1>
-                        <button>Scarica per Mac</button>
+                    <section class="text-image-section">
+                        <div class="text">
+                            <h1>Pronto a iniziare la tua avventura?</h1>
+                            <button class="big">Scarica per Mac</button>
+                        </div>
                     </section>
         </article>
     </main>
