fix/ footer in style.css

--- a/index.html
+++ b/index.html
@@ -68,7 +68,62 @@
 
     
     <footer>
+        <article id="article-footer">
 
+        <select name="language" id="select-language">
+            <option value="en">English</option>
+            <option value="it">italiano</option>
+            <option value="es">Español</option>
+            <option value="fr">Français</option>
+        </select>
+
+        <section id="social">
+            <img src="./img/social1.svg" alt="link-twitter"> 
+            <img src="./img/social2.svg" alt="link-instagram">
+            <img src="./img/social3.svg" alt="link-facebook">
+            <img src="./img/social4.svg" alt="link-youtube">
+            <img src="./img/social5.svg" alt="link-TikTok">
+        </section>
+
+        <nav>
+            <h1>Prodotto
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Stato</a></li>
+                <li><a href="">Elenco App</a></li>
+            </h1>
+
+            <h1>Compagnia
+                <li><a href="">Scarica</a></li>
+                <li><a href="">Nitro</a></li>
+                <li><a href="">Stato</a></li>
+                <li><a href="">Elenco App</a></li>
+            </h1>
+
+            <h1>Risorse
+                <li><a href="">Università</a></li>
+                <li><a href="">Assistenza</a></li>
+                <li><a href="">Sicurezza</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Suggerimenti</a></li>
+                <li><a href="">Developers</a></li>
+                <li><a href="">StreamKit</a></li>
+                <li><a href="">Creators</a></li>
+                <li><a href="">Community</a></li>
+                <li><a href="">Official 3rd Party Merch</a></li>
+            </h1>
+
+            <h1>Norme
+                <li><a href="">Termini</a></li>
+                <li><a href="">Privacy</a></li>
+                <li><a href="">Impostazioni Cookie</a></li>
+                <li><a href="">Linee guida</a></li>
+                <li><a href="">Riconoscimenti</a></li>
+                <li><a href="">Licenze</a></li>
+                <li><a href="">Informazioni sulla compagnia</a></li>
+            </h1>
+        </nav>
+    </article>
     </footer>
 </body>
 </html>
