feat/ header in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 <body>
 
     <header>
+        <div id="overlay">
+            <img src="./img/logo.svg" alt="">
+            <nav id="header-links">
+                <a href="https://discord.com/download">Download</a>
+                <a href="https://discord.com/nitro">Nitro</a>
+                <a href="https://discord.com/servers">Discord</a>
+                <a href="https://discord.com/safety">Safety</a>
+                <a href="https://support.discord.com/hc/it">Support</a>
+                <a href="https://discord.com/blog">Blog</a>
+                <a href="https://discord.com/jobs">Careers</a>
+            </nav>
+            <button>Login</button>
+            <div class="hero">
+                <img src="./img/hero-left.svg" alt="">
+                <img src="./img/hero-right.svg" alt="">
+            </div>
+            <section class="text-header">
+                <h1>IMMAGINA UNO SPAZIO COSI...</h1>
+                <p>... dove far parte di un club scolastico, un gruppo di gamer, una community artistica mondiale o dove trascorrere tempo assieme a un piccolo gruppo di amici: uno spazio in cui è più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <button id="btn-white">Scarica per Mac</button>
+                <button id="btn-black">Apri Discord nel tuo browser</button>
+            </section>
+        </div>
+
 
     </header>
     
@@ -68,8 +92,7 @@
 
     
     <footer>
-        <article id="article-footer">
- 
+        <article id="article-footer"> 
         <select name="language" id="select-language">
             <option value="en">English</option>
             <option value="it">italiano</option>
